<resources>
    <string name="app_name">Memory\nEase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addReminderText">Add a reminder</string>
    <string name="myLastReminder">My Last Reminder</string>
    <string name="bestDeal">BEST\nDEAL</string>
    <string name="thanks_settings">Thanks for using and join us MemoryEase</string>
    <string name="time_format">Time Format</string>
    <string name="aerobic_text1">Aerobic exercise is particularly good for the brain, so choose activities that keep your blood pumping. In general, anything that is good for your heart is great for your brain.</string>
    <string name="aerobic_text2">Does it take you a long time to clear out the sleep fog when you wake up? If so, you may find that exercising in the morning before you start your day makes a big difference. In addition to clearing away the cobwebs, it also primes you for learning throughout the day.</string>
    <string name="aerobic_text3">Physical activities that require hand-eye coordination or complex motor skills are particularly beneficial for brain building.</string>
    <string name="aerobic_text4">Exercise breaks can help you get past mental fatigue and afternoon slumps. Even a short walk or a few jumping jacks can be enough to reboot your brain.</string>
    <string name="meditation_text1">The practice of meditation may positively affect your health in many ways.</string>
    <string name="meditation_text2">It is relaxing and soothing, and has been found to reduce stress and pain, lower blood pressure and even improve memory (8Trusted Source).</string>
    <string name="meditation_text3">In fact, meditation has been shown to increase gray matter in the brain. Gray matter contains neuron cell bodies.</string>
    <string name="meditation_text4">As you age, gray matter declines, which negatively impacts memory and cognition.</string>
    <string name="meditation_text5">Meditation and relaxation techniques have been shown to improve short-term memory in people of all ages, from people in their 20s to older adults.</string>
    <string name="meditation_text6">For example, one study showed that Taiwanese college students who engaged in meditation practices like mindfulness had significantly better spatial working memory than students who did not practice meditation.</string>
    <string name="meditation_text7">Spatial working memory is the ability to hold and process information in your mind about the positions of objects in space.</string>
    <string name="sleep_text1">Lack of proper sleep has been associated with poor memory for quite some time.</string>
    <string name="sleep_text2">Sleep plays an important role in memory consolidation, a process in which short-term memories are strengthened and transformed into long-lasting memories.</string>
    <string name="sleep_text3">Research shows that if you’re sleep deprived, you could be negatively impacting your memory.</string>
    <string name="sleep_text4">For example, one study looked at the effects of sleep in 40 children between ages 10 and 14 years.</string>
    <string name="sleep_text5">One group of children was trained for memory tests in the evening, then tested the following morning after a night’s sleep. The other group was trained and tested on the same day, with no sleep between training and testing.</string>
    <string name="sleep_text6">The group that slept between training and testing performed 20% better on the memory tests.</string>
    <string name="sleep_text7">Another study found that nurses working the night shift made more mathematical errors and that 68% of them scored lower on memory tests compared with nurses working the day shift.</string>
    <string name="sleep_text8">Health experts recommend adults get between 7 and 9 hours of sleep each night for optimal health.</string>
    <string name="question_meditation">Meditation isn’t just good for your body it’s also good for your brain. Research suggests meditation may increase gray matter in the brain and improve spatial working memory.</string>
    <string name="question_exercise"> Exercise brings incredible benefits for your whole body, including your brain. Even moderate exercise for short periods has been shown to improve cognitive performance, including memory, across all age groups.</string>
    <string name="question_sleep">Studies have consistently associated sufficient sleep with better memory performance. Sleep helps consolidate memories. You’re also likely to perform better on memory tests if you’re well rested than if you’re sleep deprived.</string>
    <string name="question_crossword">Games that challenge your brain may help you strengthen your memory and may even reduce the risk of dementia.</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="games">GAMES</string>
    <string name="advice">Advice</string>
    <string name="aerobic_exercise">AEROBIC EXERCISE</string>
    <string name="puzzles">PUZZLES</string>
    <string name="go_to_games">GO TO GAMES</string>
    <string name="meditation">MEDITATION</string>
    <string name="sleep">SLEEP</string>
    <string name="use_reminder">USE REMINDER</string>
    <string name="email_upper_text_question">have a question about the subscriptions, or want to request a new features?</string>
    <string name="your_text_reference">Take a peek at our FAQ</string>
    <string name="quick_answers">for quick, answers, or</string>
    <string name="quick_answers1">fill out the form below and we all get back to you soon.</string>
    <string name="whats_your_email_desc">We will not use it for evil (or anything other than writing you back.)</string>
    <string name="upgrade_pro_advice_info">Various recommendations to prevent short and long term forgetfulness. Various puzzles and more.</string>
    <string name="upgrade_pro_statistic_info">Access detailed statistics of the reminders you set weekly, monthly, yearly (how many reminders you set in which time intervals, in which categories, etc.) and much more</string>
    <string name="upgrade_pro_notiandwitgets">Set unlimited reminders, customize reminder sound, icon and more. Ability to set reminders via widget without opening the app.</string>
    <string name="theme_color">Want your app to stay a certain color? we got you. Flip switch and keep it exactly how you like it</string>
    <string name="much_appreciation">We\'re a tiny indie developer entirely by our sweet customers. Your upgrade will help us continue to improve MemoryEase long into the future--thanks so much for your support!</string>
    <string name="go_top">Go back up to upgrade</string>
    <string name="abouttheteam">About the Team</string>
    <string name="heyhihello">Hey Hi Hello!</string>
    <string name="abouttheteam1">We\'re Hakan Ozcan and Mustafa Yildiz the crew behind MemoryEase. Here\'s the tale of how it came to be, and our philosophy for building it.</string>
    <string name="abouttheteam2">In fact, we suffered from forgetfulness many times during the day. When we thought about how we could prevent this problem, we actually laid the foundations of MemoryEase.</string>
    <string name="abouttheteam3">We thought we could do better by making something obvius: an app that showed only the most important info in one straightforward page.</string>
    <string name="abouttheteam4">We looked at various apps, searched for advice, but nothing was enough</string>
    <string name="abouttheteam5">We spent a long time testing, gathering information, getting advice from people who suffered from the same problem, and after a long development process, MemoryEase was born</string>
    <string name="abouttheteam6">We launched version 1.0 for Android in late 2023.</string>
    <string name="question_by_of_the_weeek">A statistic of which day you set the most reminders. It can be an indicator of which days you might be more forgetful.</string>
    <string name="question_by_of_the_time">A statistic on which time you set reminders the most. It can be an indicator of which hours you might be more forgetful.</string>
    <string name="memory_game1">Shuffle Card Memory Game</string>
    <string name="start_game_65">Start Game 6x5</string>
    <string name="start_game_54">Start Game 5x4</string>
    <string name="start_game3">Start Match 3</string>
    <string name="sudoku">Sudoku</string>
    <string name="norwegian_description">A picture of a norwegian flag</string>
    <string name="british_description">A picture of a british flag</string>
    <string name="new_game">Start New Game</string>
    <string name="add_new_board">Add New Board</string>
    <string name="continue_new_board">Continue</string>
    <string name="successful_new_board">New board saved</string>
    <string name="fail_new_board">Failed to save new board</string>
    <string name="show_instructions">Show instructions</string>
    <string name="choose_language">Choose language:</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_1">1. In Sudoku it is intended to place all the remaining pieces on the board. The numbers range from 1 to 9 (in 9x9 Sudoku).</string>
    <string name="instructions_2">2. The board is separated into several squares, and inside each of them it is only allowed to place one of each number.</string>
    <string name="instructions_3">3. It is only allowed to place one of each number at each row, both horizontal and vertical.</string>
    <string name="go_back_button">Go back</string>
    <string name="choose_difficulty">Choose difficulty:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="start_game">Start Game</string>
    <string name="choose_number">Choose number</string>
    <string name="choose_a_number">Choose number to place:</string>
    <string name="place_number">Place number</string>
    <string name="piece_unsure">Mark piece as unsure</string>
    <string name="remove_piece">Remove piece</string>
    <string name="start_piece_error">Can not change start piece</string>
    <string name="check_board">Check board</string>
    <string name="board_correct">Board is correct</string>
    <string name="board_incorrect">Board is not correct</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="email_support">Email Support</string>
    <string name="welovetoherfrom">We\'d love to hear from you!</string>
    <string name="Whatsyourname">What\'s your name?</string>
    <string name="whatyouremail">What\'s your email?</string>
    <string name="whatsup">What\'s up?</string>
    <string name="helloyoucanwrite">Hello! You can write the message you want to convey here.</string>
    <string name="sendyourmessage">Send your message</string>
    <string name="sign_out">Sign Out</string>
    <string name="memoryease_updates">MemoryEase Updates</string>
    <string name="howtosetreminder">How to Set a Reminder?</string>
    <string name="bytime">by Time</string>
    <string name="bylocation">by Location</string>
    <string name="bytime1">If you only want to set a reminder for a specific time, you need to select the time and date.(no need to select the location)</string>
    <string name="bylocation1">If you want to remember to reach a specific location, just set a reminder by location (no need to select time and date).</string>
    <string name="bylocation2">Reminder works when 1 km distance remains.</string>
</resources>