<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    app:cardBackgroundColor="#F8BC48"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/howtosetreminder"
                android:textSize="16sp"
                android:textColor="#fff"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/br_firma_bold"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bytime"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:textColor="#fff"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/br_firma_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bytime1"
                android:textColor="#fff"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/br_firma_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/br_firma_medium"
                android:text="@string/bylocation"
                android:textColor="#fff"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bylocation1"
                android:textColor="#fff"
                android:textSize="14sp"
                android:fontFamily="@font/br_firma_medium"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bylocation2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/br_firma_medium"
                android:textColor="#fff"
                android:textSize="14sp"
                android:layout_marginEnd="10dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp"/>

        </LinearLayout>
    </ScrollView>


</androidx.cardview.widget.CardView>