<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".SettingsActivity.EmailSupportActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailSupportUpperConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/emailSupportCancelIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/textUpperEmailSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/emailSupportCancelIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            android:textColor="@color/textcolor"
            android:text="@string/email_support"
            android:fontFamily="@font/br_firma_semibold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/upperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:text="@string/welovetoherfrom"
        app:layout_constraintTop_toBottomOf="@id/emailSupportUpperConstraint"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/br_firma_medium"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AppTheme"
        app:layout_constraintTop_toBottomOf="@+id/upperText">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/upperText"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_upper_text_question"
            android:textColor="@color/textcolor"
            android:textSize="14sp"
            android:fontFamily="@font/br_firma_regular"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textcolor"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/br_firma_regular"
                android:text="@string/your_text_reference"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textcolor"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/br_firma_regular"
                android:text="@string/quick_answers"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_answers1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/textcolor"
            android:fontFamily="@font/br_firma_regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor"
            android:textSize="16sp"
            android:text="@string/Whatsyourname"
            android:fontFamily="@font/br_firma_medium"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/eMailSupportName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/mail_support_box_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="John Doe"
            android:textColor="@color/textcolor"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor"
            android:textSize="16sp"
            android:text="@string/whatyouremail"
            android:fontFamily="@font/br_firma_medium"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/textcolor"
            android:text="@string/whats_your_email_desc"
            android:textSize="14sp"
            android:fontFamily="@font/br_firma_regular"/>

        <EditText
            android:id="@+id/emailSupportMail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/mail_support_box_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="johndoe@gmail.com"
            android:textColor="@color/textcolor"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/textcolor"
            android:text="@string/whatsup"
            android:fontFamily="@font/br_firma_medium"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>


        <EditText
            android:id="@+id/eMailSupportDesc"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/mail_support_box_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:gravity="start"
            android:paddingStart="10dp"
            android:text="@string/helloyoucanwrite"
            android:textColor="@color/textcolor"
            android:textSize="15sp"
            android:fontFamily="@font/br_firma_medium"
            android:layout_marginEnd="20dp"/>


        <RelativeLayout
            android:id="@+id/buttonSent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_send_message_bg_box">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:text="@string/sendyourmessage"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="200dp"/>




</LinearLayout>

    </ScrollView>







</LinearLayout>